hot fix alignment of download form

--- a/dest/stylesheets/main.css
+++ b/dest/stylesheets/main.css
@@ -1172,3 +1172,7 @@ hr{
 .vw-100{
   min-width:100vw;
 }
+
+.form-right{
+  margin-left:auto;
+}
