--- a/preCSS/main.css
+++ b/preCSS/main.css
@@ -107,4 +107,8 @@
 .vw-100 {
   min-width: 100vw;
 }
+
+.form-right {
+  margin-left: auto;
+}
 /* ------------------------- */
